# analysegnss

./: .gitattributes  .gitignore  .launch_rnx2rtkp.py.swp  README.md  config.py  ebh_lines.py  ebh_process_launcher.py  ebh_timings_desc.txt  get_base_coord.py  get_ebh_timings.py  get_rinex_files.py  get_rnx_files.py  globalvars.py  glonass_ephemeris_reader.py  gnss_ephemeris_reader.py  justfile  launch_ebh_process.py  launch_rnx2rtkp.py  ppk_rnx2rtkp.py  pvtgeod_analyse.py  pyproject.toml  requirements.txt  rnx2rtkp_pos.py  rnx_csv.py  rnxnav_csv.py  rnxobs_csv.py  rtk_pvtgeod.py  rtkpos_analyse.py  rtkpos_plot.py  rtkppk_plot.py  setup.cfg  setup.py
data/: ROVR00BEL_R_20241701647_05H_10Z_MO.pos
data/2024-12-19-LZ_Schaffen_Test/: base.sbf  rover.sbf_SBF_BaseStation1.txt  rover.sbf_SBF_PVTGeodetic2.txt
data/2024-12-19-LZ_Schaffen_Test/rtkl_pos/: SEPT00BEL_R_20243540907_14M_10Z_MO_PPK.pos
data/20250210_testinghoeilaart_halflength/: base.sbf
data/20250210_testinghoeilaart_halflength/plots/: rover_sbf_scatter.html
data/20250227_jubelpark_3lijnen/: base.sbf
data/20250227_jubelpark_3lijnen/plots/: rover_RTK_pnt_standard_csv_enu.html  rover_RTK_pnt_standard_csv_scatter.html
data/20250227_jubelpark_5lijnen/: base.sbf  rover.sbf_SBF_PVTGeodetic2.txt
data/bert/: BERT00BEL_R_20243640700_41H_MN.rnx
data/brux/: BRUX00BEL0_GREC.nav
data/ebh_timings/: 241001-keiheuvel-demo-timings.txt  241001-keiheuvel-demo-timings_autocreated.txt  salton_timings.txt
data/glabng/: KMS000BEL_R_20240890943_03H_01S_MO_gal.glab
data/keiheuvel/: base00BEL_R_20242751021_01H_MN.rnx
data/nmea/: 20241128-161759-usb-FTDI_FT230X_Basic_UART_DA0150ZY-if00-port0.out
data/ocotillo_ebhlines/: ocotillo_CL.csv  ocotillo_L+10.csv  ocotillo_L+15.csv  ocotillo_L+5.csv  ocotillo_L-10.csv  ocotillo_L-15.csv  ocotillo_L-5.csv
data/saltonsea_ebhlines/: saltonsea_CL.csv  saltonsea_L+10.csv  saltonsea_L+4.csv  saltonsea_L+8.csv  saltonsea_L-10.csv  saltonsea_L-4.csv  saltonsea_L-8.csv
data/ublox/: 2025-4-26_132532_serial-COM3_prise_statique_V1.nav  2025-4-26_132532_serial-COM3_prise_statique_V1_.obs
docs/: generate_docs.py  gfzrnx_help.txt  glab_runs.txt
docs/analysegnss/: index.html
docs/analysegnss/analyse/: cn0_dataframe.html  index.html  search.js
docs/analysegnss/glabng/: glab_constants.html  glab_msg_headers.html  glab_parser.html  glabng_class.html  index.html  search.js
docs/analysegnss/rinex/: get_rnx_files.html  index.html  rinex_class.html  rinex_column_names.html  rinex_nav_class.html  rinex_obs_class.html  rnx_csv.html  rnxnav_csv.html  rnxobs_csv.html  search.js
docs/analysegnss/rtkpos/: index.html  ppk_rnx2rtkp.html  rtk_constants.html  rtkpos_class.html  search.js
docs/analysegnss/sbf/: get_base_xyz_from_sbf.html  index.html  rtk_pvtgeod.html  sbf_blocks_polars.html  sbf_class.html  sbf_constants.html  sbfmeas_csv.html  search.js
docs/md/: generate_docs.py
glabng/: glab-freqs.txt  runs.txt
gnss/: gnss_dt.py
gnss/plot/: plot_utm.py
plots/: plot_utm.py
rinex/: rinex_class.py  rinex_column_names.py  rinex_nav_class.py  rinex_obs_class.py
rtkpos/: rtk_constants.py  rtkpos_class.py
rtkpos/rnx2rtkp_config/: rnx2rtkp_PPK_el10_nomask_GE_tow.conf
sbf/: sbf_class.py  sbf_constants.py
scripts/: bin2asc.sh  gfzrnx.t  sbf2rin.sh
src/analysegnss/: config.py  requirements.txt
src/analysegnss/CSV/: CSV_class.py  process_cn0.py
src/analysegnss/analyse/: cn0_daily.py  cn0_dataframe.py  compute_position_error.py  pnt_quality_analysis.py
src/analysegnss/csv/: csv_class.py  process_cn0.py
src/analysegnss/glabng/: glab_constants.py  glab_msg_headers.py  glab_parser.py  glab_process.py  glab_reader.py  glabng_class.py  readme.md
src/analysegnss/gnss/: EarthPosition.py  GLONASSEphemeris.py  GNSSNavReader.py  GNSSephemeris.py  general_pnt_quality_dict.py  general_pvt_quality_dict.py  geoid.py  gnss_dt.py  gnss_ephemeris.py  gnss_nav_reader.py  gnss_satellite.py  gnss_utils.py  gps_sat_pos.c  sp3_interpolator.py  sp3_reader.py  standard_pnt_quality_dict.py
src/analysegnss/launch/: launch_ebh_process.py  launch_rnx2rtkp.py
src/analysegnss/nmea/: nmeaReader.py  nmea_class.py  nmea_constants.py  nmea_reader.py
src/analysegnss/plots/: discrete_colors.py  plot_columns.py  plot_constants.py  plot_coords.py  plot_fonts.py  plot_utm.py  readme.md  rtkppk_plot.py  utm_columns.py
src/analysegnss/pnt/: merge_pnt_sources.py  pnt_columns.py  pnt_data_collector.py  pnt_data_collector_df_constructor.py
src/analysegnss/rinex/: get_rnx_files.py  readme.md  rinex_class.py  rinex_column_names.py  rinex_nav_class.py  rinex_obs_class.py  rnx_csv.py  rnxnav_csv.py  rnxobs_csv.py
src/analysegnss/rtkpos/: ppk_rnx2rtkp.py  readme.md  rtk_constants.py  rtklib_constants.py  rtkpos_class.py  rtkpos_reader.py
src/analysegnss/rtkpos/rnx2rtkp_config/: rnx2rtkp_EBH_PPK_default.conf  rnx2rtkp_PPK_el10_nomask_GE_hms.conf  rnx2rtkp_PPK_el10_nomask_GE_tow.conf  rnx2rtkp_PPK_static_el10_nomask_GE_tow.conf
src/analysegnss/sbf/: get_base_coord_from_sbf.py  get_base_xyz_from_sbf.py  readme.md  rtk_pvtgeod.py  sbf_blocks_polars.py  sbf_class.py  sbf_column_mapping.py  sbf_constants.py  sbf_reader.py  sbfmeas2csv.py  sbfmeas_csv.py  sbfnav_csv.py
src/analysegnss/ublox/: count.txt  readme.md  test_ubx_rawx.py  ubx_class.py  ubx_definitions.py  ubx_file.py  ubx_mga_gps_nav.py  ubx_nav_dop.py  ubx_nav_posllh.py  ubx_nav_pvt.py  ubx_nav_relposned.py  ubx_nav_sat.py  ubx_nav_usage_example.py  ubx_parser.py  ubx_rawx.py  ubx_rxm_rawx.py  ubx_serial_example.py
src/analysegnss/utils/: argument_parser.py  init_logger.py  readme.md  utilities.py
testcode/: glonass_ephemeris_reader.py  gnss_ephemeris_reader.py  rtklib_ephemeris_ai_translate.py  test_runs.sh
tests/: Makefile  bc_velo.c  euclidian_distance.py  test_ephemeris.py
tests/data/: BERT00BEL_R_20243640700_41H_MN.rnx  BERT00BEL_R_20243640700_41H_MN_C14.satpos  BERT00BEL_R_20243640700_41H_MN_G16.rnx  BERT00BEL_R_20243640700_41H_MN_G16.satpos
utils/: argument_parser.py  gnss_dt.py  init_logger.py  readme.md  utilities.py
(+10 files in other folders)
