[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "analysegnss"
version = "2.0.2"
description = "Package for processing GNSS data from various sources (RINEX, SBF, etc.) with EBH-operations support"
readme = "README.md"
keywords = ["GNSS", "EBH", "RINEX", "SBF", "RTKLIB", "gLAB", "UTM"]
requires-python = ">=3.8"
dependencies = [
    "numpy>=2.2.0",
    "pandas>=2.2.0",
    "polars>=0.24.0",
    "matplotlib",                   # Add version if you rely on specific features
    "plotly",                       # Add version if you rely on specific features
    "python-dateutil>=2.9.0.post0",
    "pytz>=2025.1",
    "rich>=13.9.0",
    "utm>=0.7.0",
    "argcomplete>=3.6.0",
]

[[project.authors]]
name = "Alain Muls"
email = "alain.muls@mil.be"


[[project.authors]]
name = "Pieterjan De Meulemeester"
email = "pieterjan.demeulemeester@mil.be"


[project.license]
text = "MIT License"


[project.scripts]
ebh_lines = "analysegnss.scripts.ebh.ebh_lines:main"
get_base_xyz_from_sbf = "analysegnss.sbf.get_base_xyz_from_sbf:main"
get_ebh_timings = "analysegnss.scripts.ebh.get_ebh_timings:main"
get_rnx_files = "analysegnss.rinex.get_rnx_files:main"
glab_parser = "analysegnss.glabng.glab_parser:main"
gradient_ebhlines = "analysegnss.scripts.ebh.gradient_ebhlines:main"
launch_ebh_process = "analysegnss.launch.launch_ebh_process:main"
launch_rnx2rtkp = "analysegnss.launch.launch_rnx2rtkp:main"
nmeaReader = "analysegnss.nmea.nmeaReader:main"
plot_coords = "analysegnss.plots.plot_coords:main"
ppk_rnx2rtkp = "analysegnss.rtkpos.ppk_rnx2rtkp:main"
reformat_sbf_rnx_for_opus = "analysegnss.scripts.opus.reformat_sbf_rnx_for_opus:main"
rnx_csv = "analysegnss.rinex.rnx_csv:main"
rnxnav_csv = "analysegnss.rinex.rnxnav_csv:main"
rnxobs_csv = "analysegnss.rinex.rnxobs_csv:main"
rtk_pvtgeod = "analysegnss.sbf.rtk_pvtgeod:main"
sbfmeas_csv = "analysegnss.sbf.sbfmeas_csv:main"
sbfnav_csv = "analysegnss.sbf.sbfnav_csv:main"


[tool.setuptools]
include-package-data = true


[tool.setuptools.package-dir]
"" = "src"


[tool.setuptools.packages.find]
where = ["src"]
