[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "analysegnss"
version = "1.0.3"
description = "Package for processing GNSS data from various sources (RINEX, SBF, etc.) with EBH-operations support"
readme = "README.md"
keywords = ["GNSS", "EBH", "RINEX", "SBF", "RTKLIB", "gLAB", "UTM"]
requires-python = ">=3.8"
dependencies = [
    "argcomplete>=3.6.0",
    "certifi==2025.1.31",
    "contourpy>=1.3.0",
    "cycler>=0.12.0",
    "fonttools>=4.56.0",
    "kiwisolver>=1.4.0",
    "markdown-it-py>=3.0.0",
    "matplotlib>=3.10.0",
    "mdurl>=0.1.0",
    "narwhals>=1.31.0",
    "numpy>=2.2.0",
    "packaging>=24.0",
    "pandas>=2.2.0",
    "pillow>=11.1.0",
    "plotly>=6.0.0",
    "polars>=1.24.0",
    "Pygments>=2.19.0",
    "pynmea2>=1.19.0",
    "pyparsing>=3.2.0",
    "pyproj>=3.7.1",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2025.0",
    "rich>=13.9.0",
    "six>=1.17.0",
    "tabulate>=0.9.0",
    "termcolor>=2.5.0",
    "tzdata>=2025.0",
    "utm>=0.7.0",
    "pyubx2>=1.2.52",
]

[[project.authors]]
name = "Alain Muls"
email = "alain.muls@mil.be"


[[project.authors]]
name = "Pieterjan De Meulemeester"
email = "pieterjan.demeulemeester@mil.be"


[project.license]
text = "MIT License"


[project.scripts]
compute_position_error = "analysegnss.analyse.compute_position_error:main"
ebh_lines = "analysegnss.scripts.ebh.ebh_lines:main"
get_base_coord_from_sbf = "analysegnss.sbf.get_base_coord_from_sbf:main"
get_ebh_timings = "analysegnss.scripts.ebh.get_ebh_timings:main"
get_rnx_files = "analysegnss.rinex.get_rnx_files:main"
glab_parser = "analysegnss.glabng.glab_parser:main"
gradient_ebhlines = "analysegnss.scripts.ebh.gradient_ebhlines:main"
launch_ebh_process = "analysegnss.launch.launch_ebh_process:main"
launch_rnx2rtkp = "analysegnss.launch.launch_rnx2rtkp:main"
nmea_reader = "analysegnss.nmea.nmea_reader:main"
plot_coords = "analysegnss.plots.plot_coords:main"
ppk_rnx2rtkp = "analysegnss.rtkpos.ppk_rnx2rtkp:main"
reformat_sbf_rnx_for_opus = "analysegnss.scripts.opus.reformat_sbf_rnx_for_opus:main"
rnx_csv = "analysegnss.rinex.rnx_csv:main"
rnxnav_csv = "analysegnss.rinex.rnxnav_csv:main"
rnxobs_csv = "analysegnss.rinex.rnxobs_csv:main"
rtk_pvtgeod = "analysegnss.sbf.rtk_pvtgeod:main"
sbfmeas_csv = "analysegnss.sbf.sbfmeas_csv:main"
sbfnav_csv = "analysegnss.sbf.sbfnav_csv:main"
ubx_parser = "analysegnss.ublox.ubx_parser:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"analysegnss.gnss.geoids" = ["*.pgm"]

[tool.setuptools.package-dir]
"" = "src"


[tool.setuptools.packages.find]
where = ["src"]
