[metadata]
name = gnssanalysis
version = 1.1

[options]
packages = find:
package_dir =
    = src
install_requires =

[options.entry_points]
console_scripts =
    
    # launch scripts
    launch_ebh_process = analysegnss.launch.launch_ebh_process:main
    launch_rnx2rtkp = analysegnss.launch.launch_rnx2rtkp:main
    
    # rinex
    get_rnx_files = analysegnss.rinex.get_rnx_files:main

    # SBF
    get_base_xyz_from_sbf = analysegnss.sbf.get_base_xyz_from_sbf:main
    rtk_pvtgeod = analysegnss.sbf.rtk_pvtgeod:main

    # rtklib
    ppk_rnx2rtkp = analysegnss.rtkpos.ppk_rnx2rtkp:main

    # ebh
    ebh_lines = analysegnss.scripts.ebh.ebh_lines:main
    get_ebh_timings = analysegnss.scripts.ebh.get_ebh_timings:main

    # plot
    rtkppk_plot = analysegnss.plots.rtkppk_plot:main


