[metadata]
name = analysegnss
version = 1.1

[options]
packages = find:
package_dir =
    = src
include_package_data = True

[options.packages.find]
where = src

install_requires =
    annotated-types==0.7.0
    argcomplete==3.4.0
    contourpy==1.2.1
    cycler==0.12.1
    fonttools==4.53.0
    kiwisolver==1.4.5
    matplotlib==3.9.1
    numpy==2.0.0
    packaging==24.1
    pandas==2.2.2
    pillow==10.4.0
    plotly==5.22.0
    polars==0.20.31
    pyarrow==16.1.0
    pydantic==2.7.4
    pydantic_core==2.18.4
    pyparsing==3.1.2
    python-dateutil==2.9.0.post0
    pytz==2024.1
    rich==13.9.4
    seaborn==0.13.2
    setuptools==75.8.0
    six==1.16.0
    tabulate==0.9.0
    tenacity==8.4.2
    termcolor==2.4.0
    tqdm==4.66.4
    typing_extensions==4.12.2
    tzdata==2024.1
    utm==0.7.0

[options.entry_points]
console_scripts =
    
    # launch scripts
    launch_ebh_process = analysegnss.launch.launch_ebh_process:main
    launch_rnx2rtkp = analysegnss.launch.launch_rnx2rtkp:main

    # rinex
    get_rnx_files = analysegnss.rinex.get_rnx_files:main
    reformat_sbf_rnx_for_opus = analysegnss.scripts.opus.reformat_sbf_rnx_for_opus:main

    # SBF
    get_base_xyz_from_sbf = analysegnss.sbf.get_base_xyz_from_sbf:main
    rtk_pvtgeod = analysegnss.sbf.rtk_pvtgeod:main

    # rtklib
    ppk_rnx2rtkp = analysegnss.rtkpos.ppk_rnx2rtkp:main

    # NMEA
    nmeaReader = analysegnss.nmea.nmeaReader:main

    # ebh
    ebh_lines = analysegnss.scripts.ebh.ebh_lines:main
    get_ebh_timings = analysegnss.scripts.ebh.get_ebh_timings:main
    gradient_ebhlines = analysegnss.scripts.ebh.gradient_ebhlines:main
    # plot
    plot_coords = analysegnss.plots.plot_coords:main


